# Pharmacy

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env-example  pyproject.toml
alembic/: env.py
alembic/versions/: 95b9ea791240_init_client_models.py
diagrams/: class-diagrams.puml
src/: config.py  dependencies.py  engine.py  exceptions.py  main.py  models.py  types.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 2023-12-19-08-28-55_d30b3aae98cf_.py  2023-12-20-13-12-01_f12c61cdbdf4_.py  2024-05-06-20-06-48_6ecf0b30f499_init_db.py  2024-05-18-07-55-54_de7d61ff62ae_added_new_table.py  2024-05-29-21-05-32_454c028c52d2_update_diseases_diagnos.py  210a0736b8c8_create_models.py
src/client_app/: dependencies.py  dtos.py  models.py  repositories.py  schemes.py  services.py
src/client_app/routs/: __init__.py  client_routs.py
src/diagnosis_app/: dependencies.py  dtos.py  models.py  repositories.py  schemes.py  services.py
src/diagnosis_app/routs/: __init__.py  category_disease_routs.py  diagnosis_routs.py  disease_routs.py
src/doctor_app/: dependencies.py  dtos.py  models.py  modles.py  repositories.py  routs.py  schemes.py  services.py
src/doctor_app/routs/: __init__.py  appointment_routs.py  doctor_routs.py
src/pharmacy_app/models/: __init__.py  category_disease.py  client.py  client_diagnosis.py  diagnosis.py  disease.py  doctor.py  doctor_appointment.py  profession.py
src/phermacy_app/models/: client.py  (+6 more)
src/profession_app/: dependencies.py  dtos.py  models.py  repositories.py  routs.py  schemes.py  services.py
