[tool.poetry]
name = "firstlaba"
version = "0.1.0"
description = ""
authors = ["Nikolaj <nikolaj.v@itfox-web.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
